testsuite/tests/name_resolution/generic_pkg_inst_5/test.out
Analyzing foo.adb
#################

Resolving xrefs for node <AssignStmt foo.adb:9:4-9:25>
******************************************************

foo.adb:9:9: error: expected Opt_Type [instance at line 4], got Opt_Type [instance at line 5]
9 |    X := Int2_Opt.Create;
  |         ^^^^^^^^^^^^^^^


Expected name resolution failure for node <AssignStmt foo.adb:9:4-9:25>


Done.
